--- a/assets/style.css
+++ b/assets/style.css
@@ -8,10 +8,12 @@ header {
     display: flexbox;
     background-image: url(./images/banner-943868__340.webp);
     
+    
     margin: 10px;
 }
 
 h1 {
+    /* text-align: end; */
    
     color: aliceblue;
 }
@@ -37,6 +39,7 @@ body {
 }
 
 nav ul li {
+    align-content: end;
     color: aliceblue;
 }
 
@@ -50,14 +53,21 @@ footer {
 }
 
 #aside {
+    display:;
     
-    display: flex;
-    flex-direction:row;
+    
 }
 
-#profile {
-    align-items: end;
-    height: 10px;
-    width: 10px;
+footer {
+    text-align: center;
+}
 
+.hero-img img {
+    width: 100px;
+    border-radius: 50%;
+    display: flex;
+    float: 
+    
+    
+    
 }
